cloud-controller-manager-talos.yml
---
# Source: proxmox-cloud-controller-manager/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: proxmox-cloud-controller-manager
  labels:
    helm.sh/chart: proxmox-cloud-controller-manager-0.1.4
    app.kubernetes.io/name: proxmox-cloud-controller-manager
    app.kubernetes.io/instance: proxmox-cloud-controller-manager
    app.kubernetes.io/version: "v0.1.1"
    app.kubernetes.io/managed-by: Helm
  namespace: kube-system
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: proxmox-cloud-controller-manager
      app.kubernetes.io/instance: proxmox-cloud-controller-manager
  template:
    metadata:
      annotations:
        checksum/config: c69436cb1e16c36ff708b1003d3ca4c6ee6484d2524e2ba7d9b68f473acaa1ca
      labels:
        app.kubernetes.io/name: proxmox-cloud-controller-manager
        app.kubernetes.io/instance: proxmox-cloud-controller-manager
    spec:
      enableServiceLinks: false
      priorityClassName: system-cluster-critical
      serviceAccountName: proxmox-cloud-controller-manager
      securityContext:
        fsGroup: 10258
        fsGroupChangePolicy: OnRootMismatch
        runAsGroup: 10258
        runAsNonRoot: true
        runAsUser: 10258
      containers:
        - name: proxmox-cloud-controller-manager
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            seccompProfile:
              type: RuntimeDefault
          image: "ghcr.io/sergelogvinov/proxmox-cloud-controller-manager:v0.1.1"
          imagePullPolicy: IfNotPresent
          args:
            - --v=4
            - --cloud-provider=proxmox
            - --cloud-config=/etc/proxmox/config.yaml
            - --controllers=cloud-node-lifecycle
            - --leader-elect-resource-name=cloud-controller-manager-proxmox
            - --use-service-account-credentials
            - --secure-port=10258
          livenessProbe:
            httpGet:
              path: /healthz
              port: 10258
              scheme: HTTPS
            initialDelaySeconds: 60
            periodSeconds: 30
            timeoutSeconds: 300
          readinessProbe:
            httpGet:
              port: 10258
              path: /healthz
              scheme: HTTPS
            initialDelaySeconds: 300
            periodSeconds: 300
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
          volumeMounts:
            - name: cloud-config
              mountPath: /etc/proxmox
              readOnly: true
      nodeSelector:
        node-role.kubernetes.io/control-plane: ""
      tolerations:
        - effect: NoSchedule
          key: node-role.kubernetes.io/control-plane
          operator: Exists
        - effect: NoSchedule
          key: node.cloudprovider.kubernetes.io/uninitialized
          operator: Exists
      volumes:
        - name: cloud-config
          secret:
            secretName: proxmox-cloud-controller-manager
            defaultMode: 416
