coredns-local.yaml
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: coredns-local
  namespace: kube-system
  labels:
    k8s-app: kube-dns-local
    kubernetes.io/name: CoreDNS
spec:
  updateStrategy:
    type: RollingUpdate
  minReadySeconds: 15
  selector:
    matchLabels:
      k8s-app: kube-dns-local
      kubernetes.io/name: CoreDNS
  template:
    metadata:
      labels:
        k8s-app: kube-dns-local
        kubernetes.io/name: CoreDNS
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9153"
    spec:
      priorityClassName: system-node-critical
      serviceAccount: coredns
      serviceAccountName: coredns
      enableServiceLinks: false
      tolerations:
      - effect: NoSchedule
        key: node-role.kubernetes.io/control-plane
        operator: Exists
      - effect: NoSchedule
        key: node.cloudprovider.kubernetes.io/uninitialized
        operator: Exists
      - key: k8s.zerolab.dev/location
        operator: Equal
        value: public
        effect: NoSchedule
      hostNetwork: true
      containers:
      - name: coredns
        image: coredns/coredns:1.10.1
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            cpu: 100m
            memory: 128Mi
          requests:
            cpu: 50m
            memory: 64Mi
        args: [ "-conf", "/etc/coredns/Corefile.local" ]
        volumeMounts:
        - name: config-volume
          mountPath: /etc/coredns
          readOnly: true
        livenessProbe:
          httpGet:
            host: 127.0.0.1
            path: /health
            port: 8091
            scheme: HTTP
          initialDelaySeconds: 60
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            add:
            - NET_BIND_SERVICE
            drop:
            - all
          readOnlyRootFilesystem: true
      dnsPolicy: Default
      volumes:
        - name: config-volume
          configMap:
            name: coredns-local
