kuberouter.yaml
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  labels:
    k8s-app: kube-router
    tier: node
  name: kube-router
  namespace: kube-system
spec:
  selector:
    matchLabels:
      k8s-app: kube-router
      tier: node
  template:
    metadata:
      labels:
        k8s-app: kube-router
        tier: node
    spec:
      priorityClassName: system-node-critical
      serviceAccountName: kube-router
      containers:
        - name: kube-router
          image: docker.io/cloudnativelabs/kube-router
          imagePullPolicy: Always
          args:
            - "--run-router=true"
            - "--run-firewall=false"
            - "--run-service-proxy=false"
            - "--bgp-graceful-restart=true"
            - "--enable-cni=false"
            - "--enable-ibgp=false"
            - "--enable-overlay=false"
            - "--enable-pod-egress=false"
            - "--peer-router-ips=10.0.1.254"
            - "--peer-router-asns=64880"
            - "--cluster-asn=64881"
            - "--advertise-cluster-ip=true"
            - "--advertise-external-ip=true"
            - "--advertise-loadbalancer-ip=true"
          livenessProbe:
            httpGet:
              path: /healthz
              port: 20244
            initialDelaySeconds: 10
            periodSeconds: 3
          resources:
            requests:
              cpu: 50m
              memory: 50Mi
          securityContext:
            privileged: true
          volumeMounts:
            - name: xtables-lock
              mountPath: /run/xtables.lock
              readOnly: false
      hostNetwork: true
      tolerations:
        - effect: NoSchedule
          operator: Exists
        - key: CriticalAddonsOnly
          operator: Exists
        - effect: NoExecute
          operator: Exists
      volumes:
        - name: xtables-lock
          hostPath:
            path: /run/xtables.lock
            type: FileOrCreate
