proxmox-csi-plugin-talos.yml
---
# Source: proxmox-csi-plugin/templates/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: csi-proxmox
  labels:
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/audit: baseline
    pod-security.kubernetes.io/warn: baseline
---
# Source: proxmox-csi-plugin/templates/node-deployment.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: proxmox-csi-plugin-node
  namespace: csi-proxmox
  labels:
    helm.sh/chart: proxmox-csi-plugin-0.1.6
    app.kubernetes.io/name: proxmox-csi-plugin
    app.kubernetes.io/instance: proxmox-csi-plugin
    app.kubernetes.io/version: "v0.3.0"
    app.kubernetes.io/managed-by: Helm
spec:
  updateStrategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: proxmox-csi-plugin
      app.kubernetes.io/instance: proxmox-csi-plugin
      app.kubernetes.io/component: node
  template:
    metadata:
      labels:
        app.kubernetes.io/name: proxmox-csi-plugin
        app.kubernetes.io/instance: proxmox-csi-plugin
        app.kubernetes.io/component: node
    spec:
      priorityClassName: system-node-critical
      enableServiceLinks: false
      serviceAccountName: proxmox-csi-plugin-node
      securityContext:
        runAsUser: 0
        runAsGroup: 0
      containers:
        - name: proxmox-csi-plugin-node
          securityContext:
            privileged: true
            capabilities:
              drop:
                - ALL
              add:
                - SYS_ADMIN
                - CHOWN
                - DAC_OVERRIDE
            seccompProfile:
              type: RuntimeDefault
          image: "ghcr.io/sergelogvinov/proxmox-csi-node:v0.3.0"
          imagePullPolicy: IfNotPresent
          args:
            - "-v=5"
            - "--csi-address=unix:///csi/csi.sock"
            - "--node-id=$(NODE_NAME)"
          resources: {}
          volumeMounts:
            - name: socket
              mountPath: /csi
            - name: kubelet
              mountPath: /var/lib/kubelet
              mountPropagation: Bidirectional
            - name: dev
              mountPath: /dev
            - name: sys
              mountPath: /sys
        - name: csi-node-driver-registrar
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            # readOnlyRootFilesystem: true
            seccompProfile:
              type: RuntimeDefault
          image: "registry.k8s.io/sig-storage/csi-node-driver-registrar:v2.8.0"
          imagePullPolicy: IfNotPresent
          args:
            - "-v=5"
            - "--csi-address=unix:///csi/csi.sock"
            - "--kubelet-registration-path=/var/lib/kubelet/plugins/csi.proxmox.sinextra.dev/csi.sock"
          volumeMounts:
            - name: socket
              mountPath: /csi
            - name: registration
              mountPath: /registration
          resources:
            requests:
              cpu: 10m
              memory: 16Mi
        - name: liveness-probe
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            seccompProfile:
              type: RuntimeDefault
          image: "registry.k8s.io/sig-storage/livenessprobe:v2.10.0"
          imagePullPolicy: IfNotPresent
          args:
            - "-v=5"
            - "--csi-address=unix:///csi/csi.sock"
          volumeMounts:
            - name: socket
              mountPath: /csi
          resources:
            requests:
              cpu: 10m
              memory: 16Mi
      volumes:
        - name: socket
          hostPath:
            path: /var/lib/kubelet/plugins/csi.proxmox.sinextra.dev/
            type: DirectoryOrCreate
        - name: registration
          hostPath:
            path: /var/lib/kubelet/plugins_registry/
            type: Directory
        - name: kubelet
          hostPath:
            path: /var/lib/kubelet
            type: Directory
        - name: dev
          hostPath:
            path: /dev
            type: Directory
        - name: sys
          hostPath:
            path: /sys
            type: Directory
      nodeSelector:
        node.cloudprovider.kubernetes.io/platform: nocloud
      tolerations:
        - operator: Exists
---
# Source: proxmox-csi-plugin/templates/controller-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: proxmox-csi-plugin-controller
  namespace: csi-proxmox
  labels:
    helm.sh/chart: proxmox-csi-plugin-0.1.6
    app.kubernetes.io/name: proxmox-csi-plugin
    app.kubernetes.io/instance: proxmox-csi-plugin
    app.kubernetes.io/version: "v0.3.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: proxmox-csi-plugin
      app.kubernetes.io/instance: proxmox-csi-plugin
      app.kubernetes.io/component: controller
  template:
    metadata:
      annotations:
        checksum/config: c69436cb1e16c36ff708b1003d3ca4c6ee6484d2524e2ba7d9b68f473acaa1ca
      labels:
        app.kubernetes.io/name: proxmox-csi-plugin
        app.kubernetes.io/instance: proxmox-csi-plugin
        app.kubernetes.io/component: controller
    spec:
      priorityClassName: system-cluster-critical
      enableServiceLinks: false
      serviceAccountName: proxmox-csi-plugin-controller
      securityContext:
        fsGroup: 65532
        fsGroupChangePolicy: OnRootMismatch
        runAsGroup: 65532
        runAsNonRoot: true
        runAsUser: 65532
      containers:
        - name: proxmox-csi-plugin-controller
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            seccompProfile:
              type: RuntimeDefault
          image: "ghcr.io/sergelogvinov/proxmox-csi-controller:v0.3.0"
          imagePullPolicy: IfNotPresent
          args:
            - "-v=5"
            - "--csi-address=unix:///csi/csi.sock"
            - "--cloud-config=/etc/proxmox/config.yaml"
          resources:
            requests:
              cpu: 10m
              memory: 16Mi
          volumeMounts:
            - name: socket-dir
              mountPath: /csi
            - name: cloud-config
              mountPath: /etc/proxmox/
        - name: csi-attacher
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            seccompProfile:
              type: RuntimeDefault
          image: "registry.k8s.io/sig-storage/csi-attacher:v4.3.0"
          imagePullPolicy: IfNotPresent
          args:
            - "-v=5"
            - "--csi-address=unix:///csi/csi.sock"
            - "--timeout=3m"
            - "--leader-election"
            - "--default-fstype=ext4"
          volumeMounts:
            - name: socket-dir
              mountPath: /csi
          resources:
            requests:
              cpu: 10m
              memory: 16Mi
        - name: csi-provisioner
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            seccompProfile:
              type: RuntimeDefault
          image: "registry.k8s.io/sig-storage/csi-provisioner:v3.5.0"
          imagePullPolicy: IfNotPresent
          args:
            - "-v=5"
            - "--csi-address=unix:///csi/csi.sock"
            - "--timeout=3m"
            - "--leader-election"
            - "--default-fstype=ext4"
            - "--feature-gates=Topology=True"
            - "--enable-capacity"
            - "--capacity-ownerref-level=2"
          volumeMounts:
            - name: socket-dir
              mountPath: /csi
          resources:
            requests:
              cpu: 10m
              memory: 16Mi
        - name: csi-resizer
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            seccompProfile:
              type: RuntimeDefault
          image: "registry.k8s.io/sig-storage/csi-resizer:v1.8.0"
          imagePullPolicy: IfNotPresent
          args:
            - "-v=5"
            - "--csi-address=unix:///csi/csi.sock"
            - "--timeout=3m"
            - "--handle-volume-inuse-error=false"
            - "--leader-election"
          volumeMounts:
            - name: socket-dir
              mountPath: /csi
          resources:
            requests:
              cpu: 10m
              memory: 16Mi
        - name: liveness-probe
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            seccompProfile:
              type: RuntimeDefault
          image: "registry.k8s.io/sig-storage/livenessprobe:v2.10.0"
          imagePullPolicy: IfNotPresent
          args:
            - "-v=5"
            - "--csi-address=unix:///csi/csi.sock"
          volumeMounts:
            - name: socket-dir
              mountPath: /csi
          resources:
            requests:
              cpu: 10m
              memory: 16Mi
      volumes:
        - name: socket-dir
          emptyDir: {}
        - name: cloud-config
          secret:
            secretName: proxmox-csi-plugin
      nodeSelector:
        node-role.kubernetes.io/control-plane: ""
      tolerations:
        - effect: NoSchedule
          key: node-role.kubernetes.io/control-plane
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: DoNotSchedule
          labelSelector:
            matchLabels:
              app.kubernetes.io/name: proxmox-csi-plugin
              app.kubernetes.io/instance: proxmox-csi-plugin
              app.kubernetes.io/component: controller
